<resources>
    <string name="app_name">GetOverHere</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome !</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="user_name">User name</string>
    <string name="submit">Submit</string>
    <string name="register">register</string>
    <string name="email">Email</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="driver_s_for_approval">Driver\'s For Approval</string>
    <string-array name="gender">
        <item id="NS">Not Specific</item>
        <item id="male">Male</item>
        <item id="female">Female</item>
    </string-array>
    <string-array name="licenseType">
        <item id="b">B</item>
        <item id="c">C</item>
        <item id="d">D</item>
        <item id="d1">D1</item>
        <item id="d2">D2</item>
        <item id="d3">D3</item>
        <item id="E">E</item>
    </string-array>

    <string name="applicantTitle">Applicant</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="comments">Comments</string>
    <string name="description_zoom_touch_close">Zoomed image</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hint_search">Enter Address</string>

    <!---String related to car file-->
    <String name="carIDH">Car License Number</String>
    <String name="carIDT">Car License Number</String>
    <string-array name="ownership">
        <item id="1">This is my car</item>
        <item id="2">This is work car</item>
        <item id="3">Other ownership</item>
    </string-array>
    <string-array name="seat">
        <item id="1">1</item>
        <item id="4">4</item>
        <item id="6">6</item>
        <item id="25">25</item>
        <item id="50">50</item>
    </string-array>
    <string-array name="type">
        <item id="mini">Mini</item>
        <item id="private">Private</item>
        <item id="minivan">Mini-Van</item>
        <item id="minibus">Mini-Bus</item>
        <item id="bus">Bus</item>
        <item id="transit">Transit</item>
        <item id="track">Track</item>
    </string-array>


    <!--String related to log_row-->
    <String id="date_row"></String>
    <String id="time_row"></String>
    <String id="where_to_row"></String>
    <String id="from_row"></String>
    <String id="cost_row"></String>


    <!--String related to fragment_row-->
    <String id="titleLog">Driver Travel Log</String>

    <!--String related to fragment_display_log-->
    <String id="drive_details">Drive Details</String>
    <String id="next">Next Drive</String>
    <String id="previous">Previous Drive</String>

</resources>