<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="20dp"
    android:paddingBottom="20dp"
    android:orientation="vertical">

        <TextView
            android:id="@+id/userNameH"
            android:layout_width="match_parent"
            android:layout_height="9dp"
            android:layout_weight="1"
            android:text="@string/prompt_email"
            android:textColor="#33adff"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/emailT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/PasswordH"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:text="@string/prompt_password"
            android:textColor="#33adff"
            android:textSize="30sp"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/PasswordT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:layout_weight="1"
            android:inputType="textPassword" />
        <Button
            android:id="@+id/submitB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="#33adff"
            android:text="@string/submit"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/registerH"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="#000000"
            android:textAlignment="center"
            android:text="not register yet?"
            android:layout_weight="1"
            />
        <Button
            android:id="@+id/registerB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/register"
            android:backgroundTint="#33adff"
            android:typeface="sans"
            android:layout_weight="1"/>
    </LinearLayout>