<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisplayAplicantFragment">


    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titleText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/applicantTitle" />

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="1149dp"
                tools:layout_editor_absoluteY="67dp">


                <TextView
                    android:id="@+id/licenceTypeText"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="8dp"
                    android:paddingLeft="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/licenceTypeH" />

                <TextView
                    android:id="@+id/licenceTypeH"
                    android:layout_width="match_parent"
                    android:layout_height="27dp"
                    android:layout_marginTop="7dp"
                    android:paddingLeft="10dp"
                    android:text="Licence Type:"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/licenceExprDateText" />

                <TextView
                    android:id="@+id/licenceExprDateText"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="8dp"
                    android:paddingLeft="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/licenceExprH" />

                <TextView
                    android:id="@+id/licenceExprH"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:paddingLeft="10dp"
                    android:text="Licence Expreation Date:"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/licenceIssueDateText" />

                <TextView
                    android:id="@+id/licenceIssueDateText"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="6dp"
                    android:paddingLeft="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/licenceIssuH" />

                <TextView
                    android:id="@+id/licenceIssuH"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="Licence Issue Date:"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/licenceNumText" />

                <TextView
                    android:id="@+id/licenceNumText"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="5dp"
                    android:paddingLeft="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/licenceNumH" />

                <TextView
                    android:id="@+id/licenceNumH"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:paddingLeft="10dp"
                    android:text="Licence Number:"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/emailText" />

                <TextView
                    android:id="@+id/idH"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="Id:"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fullNameText" />

                <TextView
                    android:id="@+id/emailH"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:paddingLeft="10dp"
                    android:text="Email:"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/idNumText" />

                <TextView
                    android:id="@+id/fullNameH"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:paddingLeft="10dp"
                    android:text="Full Name:"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/approveBtn"
                    android:layout_width="124dp"
                    android:layout_height="54dp"
                    android:layout_marginTop="40dp"
                    android:text="@string/accept"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.053"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/CommentsText" />

                <Button
                    android:id="@+id/rejectBtn"
                    android:layout_width="124dp"
                    android:layout_height="54dp"
                    android:layout_marginTop="40dp"
                    android:text="@string/reject"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.913"
                    app:layout_constraintStart_toEndOf="@+id/approveBtn"
                    app:layout_constraintTop_toBottomOf="@+id/CommentsText" />

                <ImageView
                    android:id="@+id/licenceImageView"
                    android:layout_width="400dp"
                    android:layout_height="300dp"
                    android:layout_marginTop="54dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.488"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/licenceTypeText"
                    tools:src="@tools:sample/backgrounds/scenic" />

                <ImageView
                    android:id="@+id/idImageView"
                    android:layout_width="400dp"
                    android:layout_height="300dp"
                    android:layout_marginTop="40dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/licenceImageView"
                    tools:src="@tools:sample/backgrounds/scenic" />

                <TextView
                    android:id="@+id/emailText"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="5dp"
                    android:paddingLeft="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/emailH" />


                <TextView
                    android:id="@+id/fullNameText"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fullNameH"
                    android:paddingLeft="10dp" />

                <TextView
                    android:id="@+id/idNumText"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="32dp"
                    android:paddingLeft="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fullNameText" />

                <EditText
                    android:id="@+id/CommentsText"
                    android:layout_width="547dp"
                    android:layout_height="237dp"
                    android:layout_marginTop="32dp"
                    android:ems="10"
                    android:gravity="start|top"
                    android:hint="@string/comments"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine"
                    android:paddingLeft="10dp"
                    android:textColorHint="#A1887F"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/idImageView" />

                <ImageView
                    android:id="@+id/imageZoomLicence"
                    android:layout_width="87dp"
                    android:layout_height="83dp"
                    android:src="@android:drawable/ic_menu_zoom"
                    app:layout_constraintBottom_toBottomOf="@+id/licenceImageView"
                    app:layout_constraintEnd_toEndOf="@+id/licenceImageView"
                    app:layout_constraintStart_toStartOf="@+id/licenceImageView"
                    app:layout_constraintTop_toTopOf="@+id/licenceImageView" />

                <ImageView
                    android:id="@+id/imageZoomId"
                    android:layout_width="87dp"
                    android:layout_height="83dp"
                    android:src="@android:drawable/ic_menu_zoom"
                    app:layout_constraintBottom_toBottomOf="@+id/idImageView"
                    app:layout_constraintEnd_toEndOf="@+id/idImageView"
                    app:layout_constraintStart_toStartOf="@+id/idImageView"
                    app:layout_constraintTop_toTopOf="@+id/idImageView" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </LinearLayout>
    <ImageView
        android:id="@+id/expanded_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:src="@tools:sample/backgrounds/scenic"
        android:visibility="gone"
        android:contentDescription="TODO" />

</FrameLayout>